# PX8Demos

./: README.md
emscripten/Cast/: Cargo.toml  Makefile
emscripten/Cast/src/: cast.p8  main.rs
emscripten/Hello/: Cargo.toml  Makefile
emscripten/Hello/src/: main.rs
emscripten/Hello2/: Cargo.toml
emscripten/Hello2/src/: main.rs
emscripten/LuaCartridge/: Cargo.toml  Makefile
emscripten/LuaCartridge/src/: main.rs
python/PacMan/: pacman.dpx8  pacman.px8  pacman.py
python/PimPim/: PimPim.px8
rust/FourmisWar/: Cargo.toml
